--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -114,6 +114,9 @@
   padding: 0px 5px;
 }
 
+.paragraph--inCash{
+  color: #5fa556;
+}
 
 @media only screen and (min-width: 640px) {
   .container--question .strong {
